scripts/Skin_Cancer/run_meta_Skinpbdcn/run.sh.log
nohup: ignoring input
  File "./run.sh", line 1
    ./run_pretrain.sh
    ^
SyntaxError: invalid syntax
